--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "next": "14.2.0",
+    "next": "^16.1.1",
     "turbo": "^2.0.0",
     "typescript": "^5.3.0"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=20.0.0"
+  },
+  "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
